# Super-Schedule

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  courses.py  events.py  groups.py  nlp.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  course.py  event.py  group.py  period.py  semester.py  user.py
backend/app/schemas/: auth.py  common.py  course.py  event.py  group.py  nlp.py  user.py
backend/app/services/: conflicts.py  defaults.py  llm_nlp.py  nlp_parser.py  permissions.py  time_utils.py
backend/app/ws/: manager.py  router.py
backend/tests/: test_llm_nlp.py  test_permissions.py
miniprogram/: README.md  app.js  app.json  app.ts  app.wxss  package.json  project.config.json  tsconfig.json
miniprogram/custom-tab-bar/: index.js  index.wxml  index.wxss
miniprogram/pages/calendar/: index.js  index.ts  index.wxml  index.wxss
miniprogram/pages/course/: index.js  index.wxml  index.wxss
miniprogram/pages/course-edit/: index.js  index.json  index.ts  index.wxml  index.wxss
miniprogram/pages/event-edit/: index.js  index.json  index.ts  index.wxml  (+1 more)
miniprogram/scripts/: validate-miniprogram.js
miniprogram/types/: api.ts  app.d.ts
miniprogram/utils/: access.js  config.js  config.ts  errors.js  request.js  request.ts  schedule-segments.js  session.js  session.ts  socket.js  socket.ts
outputs/: 小程序_UI_QA清单.md  智群日程课程表小程序_MVP决策稿.md  智群日程课程表小程序_重构项目计划书.md
(+16 files in other folders)
